// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateGrowthLineLayout > snapshot de geometria — 4 degraus 1`] = `
{
  "points": "10,70 40,70 40,55 70,55 70,40 100,40 100,25 130,25 130,10",
  "viewBox": "0 0 140 80",
}
`;

exports[`generateMeshLayout > snapshot de geometria — anchor=corner produz layout diferente de field 1`] = `
{
  "d": "M 0,40 L 0,200 M 64,40 L 64,200 M 128,40 L 128,200 M 0,40 L 160,40 M 0,104 L 160,104 M 0,168 L 160,168",
  "viewBox": "0 0 200 200",
}
`;

exports[`generateMeshLayout > snapshot de geometria — density=default, anchor=field 1`] = `
{
  "d": "M 0,0 L 0,200 M 64,0 L 64,200 M 128,0 L 128,200 M 192,0 L 192,200 M 0,0 L 200,0 M 0,64 L 200,64 M 0,128 L 200,128 M 0,192 L 200,192",
  "viewBox": "0 0 200 200",
}
`;
